Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0, 5.9.0, 5.9.1, 5.9.2
-
None
-
5dd76ba31c3c7cb9c0d9d97cd62f0d2f535a23f7
Description
Hi,
I seem to be missing the "sqldrivers" folder in QtBase git.
It used to be in src\sql\<sqldrivers>, but it's not.
Qt 5.6: http://code.qt.io/cgit/qt/qtbase.git/tree/src/sql?h=5.6 (sqldrivers is there)
Qt 5.7: http://code.qt.io/cgit/qt/qtbase.git/tree/src/sql?h=5.7 (sqldrivers is there)
Qt 5.8: http://code.qt.io/cgit/qt/qtbase.git/tree/src/sql?h=5.8 (no sqldrivers folder)
Qt 5.9: http://code.qt.io/cgit/qt/qtbase.git/tree/src/sql?h=5.9 (no sqldrivers folder)
Even the readme in 5.9 (in src\sql): http://code.qt.io/cgit/qt/qtbase.git/tree/src/sql/README.module talks about: "To compile drivers as dynamically loaded plugins, see the QTDIR/plugins/src/sqldrivers directory."
Did the sqldrivers folder got moved to somewhere else? If so, where?
Or is something seriously wrong since Qt 5.8 (where it went missing apparently)?
Best regards,
Mark
EDIT
Ahh, they went to: http://code.qt.io/cgit/qt/qtbase.git/tree/src/plugins/sqldrivers
Then i guess the README.module and sql.pro file are still wrong: http://code.qt.io/cgit/qt/qtbase.git/tree/src/sql?h=5.9
Attachments
Issue Links
- is duplicated by
-
QTBUG-63796 Building MySQL plugin via qmake and nmake (msvc17)
-
- Closed
-
- relates to
-
QTBUG-58372 re-enable out-of-tree build of sql driver plugins
-
- Closed
-
For Gerrit Dashboard: QTBUG-62479 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
211700,6 | update sqldriver docs | 5.9 | qt/qtbase | Status: MERGED | -2 | 0 |